# tree-sitter-xml

./: Cargo.toml
bindings/rust/: lib.rs
