[package]
name = "tree-sitter-xml"
description = "XML grammar for the tree-sitter parsing library"
version = "0.20.0"
authors = [
    "Rob Outterson"
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "xml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/unhammer/tree-sitter-xml"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
